--- a/src/components/book/index.module.css
+++ b/src/components/book/index.module.css
@@ -16,9 +16,11 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
   margin: auto;
-  margin-top: 15%;
+  margin-top: 5%;
   margin-right: 5%;
   float: left;
+  
+  margin-bottom: 5%; 
 }
 
 .book-cover{
