feat: created aside component, updated css and made header more responsive

--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -6,7 +6,7 @@
     border-top: 3px solid #808080;
     clear: both;
     position: relative;
-    margin-top: -200px;
+    bottom: 0;
 }
 
 .footer div{
