--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -1,6 +1,6 @@
 .navigation {
     width: 100%;
-    height: 12vh;
+    height: 150px;
     background-color: #404040;
     color: white;
     position: fixed;
@@ -9,13 +9,14 @@
 }
 
 .nav-bar {
-    margin-top: -5.5%;
-    margin-left: 50%;
+    margin-top: -4.5%;
+    text-align: center;
 }
 
 .logo {
-    width: 300px;
-    margin-right: 60%;
+    width: 250px;
+    text-align: center;
 }
+
 
 
