--- a/src/components/book/index.module.css
+++ b/src/components/book/index.module.css
@@ -17,10 +17,10 @@
   max-width: 300px;
   margin: auto;
   margin-top: 4%;
-  margin-right: 5%;
-  margin-left: 7%;
+  margin-right: 3%;
+  margin-left: 1%;
   float: left;
-  
+  text-align: center;
   margin-bottom: 5%; 
 }
 
