--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ body{
   overflow-x: hidden;
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
