--- a/src/components/input-field/index.module.css
+++ b/src/components/input-field/index.module.css
@@ -1,9 +1,10 @@
 .input-container{
-margin-bottom: 6%;
+ margin-bottom: 5%;
+ text-align: center;
 }
 
 .input-field {
-  display: block;
+  display: inline-block;
   box-sizing: border-box;
   margin-bottom: 20px;
   padding: 4px;
