--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -13,6 +13,23 @@
     text-align: center;
 }
 
+.logout-btn {
+    height: auto;
+    margin-right: 5%;
+    padding: 3%;
+    margin: 0.1%;
+    color: white;
+    white-space: nowrap;
+    text-decoration: none;
+    background-color: none;
+    font-size: 18px;
+}
+
+.logout-btn:hover {
+    
+    font-weight: bold;
+}
+
 .logo {
     width: 250px;
     text-align: center;
