--- a/src/pages/register-page/index.module.css
+++ b/src/pages/register-page/index.module.css
@@ -1,3 +1,20 @@
 .register-form {
-    margin-top: 7%;
+    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.2);
+    width: 400px;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-bottom: 70px;
+    border: 1px solid #404040;
+    margin: auto;
+    margin-top: 4%;
+    margin-bottom: 5%;
+    text-align: center;
+}
+
+.submit {
+    margin-top: 70px;
+}
+
+.input-field{
+    margin-top: 70px;
 }
