--- a/src/pages/profile-page/index.module.css
+++ b/src/pages/profile-page/index.module.css
@@ -4,7 +4,7 @@
 
 .card {
     box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.2);
-    width: 90%;
+    width: 20%;
     border: 2px solid #404040;
     margin: auto;
     margin-top: 2%;
@@ -24,7 +24,7 @@
   }
   
   .card-button {
-    border: none;
+    border: 1px solid grey;
     outline: 0;
     display: inline-block;
     padding: 8px;
