--- a/src/pages/book-details-page/index.module.css
+++ b/src/pages/book-details-page/index.module.css
@@ -1,18 +1,29 @@
 .book-container {
     box-shadow: 0 4px 8px 10px rgba(0, 0, 0, 0.2);
-    max-width: 80%;
+    max-width: 40%;
     height: 455px;
     margin: auto;
     margin-top: 5%;
     margin-bottom: 5%; 
     
     display: flex;
-  }
+}
 
 .data-container{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+}
+
+.field {
+      margin-top: 5%;
+      font-size: 18px;
+}
+
+.opinion {
+      margin-top:8%;
+      padding: 10px;
+      text-align: left;
 }
 
 .img-container{
@@ -28,4 +39,5 @@
 .likes {
       color: grey;
       font-size: 18px;
+      display: inline;
 }
