--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -1,10 +1,10 @@
 .normal-footer, .form-footer {
     width: 100%;
-    height: 8vh;
+    height: 120px;
     background-color: #404040;
     color: white;
     border-top: 3px solid #808080;
-    overflow: hidden;
+    overflow: hidden; 
     position: relative;
     clear: both;
     bottom: 0;
@@ -15,6 +15,7 @@
 }
 
 .form-footer div, .normal-footer div{
-    margin-top: 20px;
+    margin-top: 50px;
+    letter-spacing: 1px;
     text-align: center;
 }
