--- a/src/pages/book-details-page/index.module.css
+++ b/src/pages/book-details-page/index.module.css
@@ -1,6 +1,6 @@
 .book-container {
     box-shadow: 0 4px 8px 10px rgba(0, 0, 0, 0.2);
-    max-width: 40%;
+    max-width: 800px;
     height: 455px;
     margin: auto;
     margin-top: 5%;
@@ -16,16 +16,19 @@
 }
 
 .field {
-      margin-top: 5%;
+      margin-top: 4%;
       font-size: 18px;
 }
 
-.opinion {
-      margin-top:8%;
-      padding: 10px;
-      text-align: left;
-}
-
+.opinion{
+      margin-top: 10px;
+      width: 300px;
+      height: 150px;
+      resize: none;
+      border: 1px solid grey;
+      outline: none;
+      font-size: 16px;
+  }
 .img-container{
       text-align: left;
  }
