--- a/src/pages/post-book-page/index.module.css
+++ b/src/pages/post-book-page/index.module.css
@@ -18,3 +18,14 @@
 .input-field{
     margin-top: 50px;
 }
+
+.opinion{
+    width: 300px;
+    height: 150px;
+    resize: none;
+    border: 1px solid grey;
+    outline: none;
+}
+.opinion:focus, .opinion:hover{
+    border: 1px solid #404040;
+}
