--- a/src/pages/post-book-page/index.module.css
+++ b/src/pages/post-book-page/index.module.css
@@ -19,6 +19,16 @@
     margin-top: 50px;
 }
 
+.message{
+    padding: 6px 12px;
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    border: 1px solid #404040;
+    margin-top: 50px;
+}
+
 .opinion{
     width: 300px;
     height: 150px;
