--- a/src/components/input-field/index.module.css
+++ b/src/components/input-field/index.module.css
@@ -14,6 +14,12 @@ input[type="file"] {
   cursor: pointer;
 }
 
+.cover-upload:hover, .cover-upload:focus{
+  background-color: gray;
+  border: 1px solid gray;
+  color: white;
+}
+
 .input-field {
   display: inline-block;
   box-sizing: border-box;
