--- a/src/pages/book-details-page/index.module.css
+++ b/src/pages/book-details-page/index.module.css
@@ -15,14 +15,35 @@
     margin-right: auto;
 }
 
-.field {
-      margin-top: 4%;
+.button-container {
+      margin-top: 15px;
+}
+
+.liked{
+     margin-top: 5px;
+     color: gray;
+}
+
+.opinion-title{
+      margin-top: 15px;
       font-size: 18px;
 }
 
-.opinion{
-      margin-top: 10px;
+.field {
+      margin-top: 15px;
+      font-size: 18px;
       width: 300px;
+      border-bottom: 1px solid #404040;
+      padding: 0.5px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+}
+
+.opinion{
+      margin-top: 3px;
+      width: 300px;
+      padding: 10px;
       height: 150px;
       resize: none;
       border: 1px solid grey;
