--- a/src/pages/post-book-page/index.module.css
+++ b/src/pages/post-book-page/index.module.css
@@ -25,7 +25,9 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
-    border: 1px solid #404040;
+    border: 1px solid gray;
+    background-color: gray;
+    color:white;
     margin-top: 50px;
 }
 
@@ -33,6 +35,7 @@
     width: 300px;
     height: 150px;
     resize: none;
+    padding: 10px;
     border: 1px solid grey;
     outline: none;
 }
