--- a/src/pages/home-page/index.module.css
+++ b/src/pages/home-page/index.module.css
@@ -1,18 +1,17 @@
-.about {
-    margin-top: 2%; 
-    margin-bottom: 5%; 
+.about-container {
+    margin-top: 3%; 
+    width: 50%;
+    padding: 50px;
+    border: 1px solid #404040;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.bookImg{
-    float: left;
-    height: 350px;
-    margin-left: 15%;
-}
-
-h4 {
+.about-text {
     text-align: left;
-    margin-right: 30%;
+    font-weight: bold;
+    color: gray;
     font-size: 18px;
     word-spacing: 4px;
     letter-spacing: 1px;
